Minor optimizations